--- a/src/estatisticas/estatisticas.html
+++ b/src/estatisticas/estatisticas.html
@@ -49,7 +49,7 @@
         <li><a href="../estatisticas/estatisticas.html">Estatísticas</a></li>
         <li><a href="../meus-colaboradores/meus-colaboradores.html">Colaboradores</a></li>
         <li><a href="../metas/metas.html">Metas</a></li>
-      </ul>
+      </ul>  <!-- [Verificar com quem colocou o trecho acima se está repetido]-->
       <div id="close-menu-lateral" class="grid flex place-content-end">
         <p id="btn-close-menu-lateral">
           << </p>
