--- a/src/metas/metas.html
+++ b/src/metas/metas.html
@@ -56,7 +56,7 @@
 
     <!-- Meta Atual (a ideia é mais pra frente alterar a cor conforme o preenchimento avança) -->
 
-    <div class=" bg-[#6FAFC3] py-3 px-10">
+    <div class=" bg-[#c2eff1;] py-3 px-10">
         <div class="text-2xl font-bold text-black"> Metas de Adesão</div>
     </div>
 
@@ -76,20 +76,20 @@
 
     <!-- Gráfico Mensal -->
 
-    <div class="grafico-mensal bg-[#6FAFC3] py-3 px-10">
+    <div class="grafico-mensal bg-[#c2eff1;] py-3 px-10">
         <div class="text-2xl font-bold text-black"> Preenchimentos por Mês</div>
     </div>
-    <div class="bg-[#c2eff1] pb-[5%] pt-[5%] flex flex-row justify-center items-center">
+    <div class="pb-[5%] pt-[5%] flex flex-row justify-center items-center">
         <div id="columnchart_material1" style="width: 800px; height: 500px;"></div> <!-- Gráfico 1 -->
     </div>
 
 
     <!-- Botões Anual -->
 
-    <div class="bg-[#6FAFC3] py-3 px-10 ">
+    <div class="bg-[#c2eff1;] py-3 px-10 ">
         <div class="text-2xl font-bold text-black"> Preenchimentos por Ano</div>
     </div>
-    <div class="bg-[#c2eff1] pb-[5%] pt-[5%] flex flex-row justify-center items-center">
+    <div class="pb-[5%] pt-[5%] flex flex-row justify-center items-center">
         <div id="columnchart_material2" style="width: 800px; height: 500px;"></div> <!-- Gráfico 2 -->
     </div>
 
